--- a/package.json
+++ b/package.json
@@ -29,29 +29,34 @@
     "opnfv-iaas": "./schema/opnfv-iaas.yang",
     "opnfv-promise": "./lib/opnfv-promise.js"
   },
+  "main": "./lib/opnfv-promise.js",
+  "bin": {
+    "xos": "bin/promise"
+  },
+  "preferGlobal": true,
   "dependencies": {
     "node-uuid": "^1.4.7",
     "superagent": "^2.0.0",
-    "yang-express": "^0.2.6",
-    "yang-js": "^0.15.1"
+    "yang-express": "^0.4.3",
+    "yang-js": "^0.16.8"
   },
   "devDependencies": {
     "coffee-script": ">=1.7.0",
     "config": "^1.19.0",
     "mocha": "~2.0.1",
     "rimraf": "^2.5.2",
-    "should": "~3.1.3"
+    "should": "~3.1.3",
+    "yang-swagger": "^1.0.7"
   },
-  "main": "./lib/opnfv-promise.js",
   "scripts": {
     "clean": "rimraf dist/* lib/*",
     "prebuild": "npm run clean -s && mkdir -p dist",
     "build:src": "coffee -o lib -c src",
-    "build": "npm run build:src",
+    "build:api": "yang-swagger -f yaml -o swagger.yaml opnfv-promise opnfv-iaas",
+    "build": "npm run build:src && npm run build:api",
     "prepublish": "npm run build",
     "pretest": "npm run build",
     "test": "mocha",
-    "prestart": "npm run build",
-    "start": "node lib/api/server.js"
+    "start": "bin/promise opnfv-promise"
   }
 }
