updated schemas and yang-* tools dependencies

--- a/config/custom-environment-variables.yaml
+++ b/config/custom-environment-variables.yaml
@@ -7,7 +7,7 @@ opnfv-functest:
     lab: NODE_NAME
 
 # OpenStack config (native)
-openstack:
+openstack-controller:admin:
   auth:
     endpoint: OS_AUTH_URL
     strategy: OS_AUTH_STRATEGY
