update to latest yang-tools and revise YANG model schemas to better represent resource-usage-request with a choice between different usage strategies

--- a/config/default.yaml
+++ b/config/default.yaml
@@ -1,13 +1,11 @@
 # default configuration for 'npm test'
 
-opnfv-promise:
-  promise:
-    policy:
-      reservation:
-        max-future-start-range: 
-        max-future-end-range: 
-        max-duration:
-        expiry: 600
+opnfv-promise:admin:
+  policy:
+    max-future-start-range: 30
+    max-future-end-range: 120
+    max-duration: 
+    unused-expiry: 600
 
 yang-openapi:info:
   title: OPNFV Promise
